# sfpconv

./: CMakeLists.txt
inc/: hal.hpp  sfp_conv_io.hpp  sfpconv.hpp
src/: sfp_conv_io.cc  sfpconv.cc
